--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
     <head><b>index.html</b></head>
-    <body>There's a snake in my boot, friend!</body>
+    <body><br><br>'s a snake in my boot, friend!</body>
 </html>
